# Emoji-Sentiment-Analyzer

./: Cargo.toml  README.md  tests.txt
src/: grammar.pest  lib.rs  main.rs
tests/: parser_tests.rs
