[package]
name = "emoji-sentiment-analyzer"
version = "0.1.0"
edition = "2024"
description = "A Rust parser that analyzes text containing emojis to determine overall sentiment with intensity consideration. It parses sequences of words followed by one or more emojis, classifies them into positive, negative, or neutral categories, and computes a weighted sentiment score. Useful for enhanced analysis of social media messages or chat logs where emoji repetition indicates stronger emotions."


[dependencies]
pest = "2.7"
pest_derive = "2.7"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0"